# ndr-demo-app

./: .env.zapstore.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_PLAN.md  ARCHITECTURE_REVIEW.md  BETA_RELEASE.md  LICENSE  PARITY_MATRIX.md  README.md  RELEASE.md  UI_UX_FLOWS.md  ZAPSTORE_RELEASE_NOTES.md  justfile  release.env.example  zapstore.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/gradle/: libs.versions.toml
app/: build.gradle.kts
core/: Cargo.toml  build.rs  uniffi.toml
core/src/: actions.rs  core.rs  image_proxy.rs  lib.rs  local_relay.rs  qr.rs  state.rs  updates.rs
core/src/core/: account.rs  attachment_upload.rs  attachments.rs  chats.rs  config.rs  groups.rs  identity.rs  invites.rs  lifecycle.rs  mobile_push.rs  model.rs  payloads.rs  persistence.rs  profile.rs  profile_helpers.rs  projection.rs  protocol.rs  protocol_filters.rs  publish_helpers.rs  publishing.rs  relay.rs  routing.rs  support.rs  tests.rs
core/uniffi-bindgen/: Cargo.toml
docs/: flutter-feature-gap-checklist.md  release-zapstore.md
gradle/: libs.versions.toml
ios/: Info.plist  README.md  project.yml
ios/Sources/: AppManager.swift  IrisChatApp.swift  (+6 more)
macos/: Info.plist  project.yml
rust/: Cargo.toml  uniffi.toml
rust/src/: actions.rs  core.rs  lib.rs  state.rs  updates.rs
scripts/: android-build  android-release  emulator_smoke.sh  group_chat_matrix_smoke.sh  group_chat_restore_smoke.sh  ios-build  ios-release  linked_device_relay_matrix.sh  local_nostr_relay.py  local_relay_scenario_soak.sh  macos-build  mixed_platform_group_chat_matrix.sh  mobile_bootstrap_macos.sh  mobile_relay_common.sh  publish-zapstore-android.sh  release_common.sh  run_android_emulators.sh  run_harness.py  run_ios_harness.py  run_ios_simulators.sh  test_beta_local.sh  test_fast.sh  test_interop_confidence.sh  test_native_contract.sh  test_rust.sh
tools/: ios-runtime-doctor  ndr-run  run-android  run-ios  run-macos
(+73 files in other folders)
