[package]
name = "ndr-demo-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
flume = "0.11"
hashtree-blossom = "=0.2.8"
hashtree-config = "=0.2.8"
hashtree-core = "=0.2.8"
nostr = { version = "0.37", default-features = false, features = ["std", "nip44"] }
nostr35 = { package = "nostr", version = "0.35.0", default-features = false, features = ["std", "nip44"] }
nostr-sdk = { version = "0.37", default-features = false, features = ["nip44"] }
nostr-double-ratchet = { path = "vendor/nostr-double-ratchet/rust/crates/nostr-double-ratchet" }
nostr-double-ratchet-nostr = { path = "vendor/nostr-double-ratchet/rust/crates/nostr-double-ratchet-nostr" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "fs"] }
tokio-tungstenite = "0.24"
tokio-util = { version = "0.7", features = ["compat"] }
uniffi = "0.31"
url = "2"

[dev-dependencies]
tempfile = "3"
